Get rid of path form web compiler